<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Deal Roulette</string>
    <string name="nav_header_subtitle">DealRoulette@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_multipliers">MULTIPLIERS</string>
    <string name="menu_picturebets">PICTURE BETS</string>
    <string name="menu_easy">EASY</string>
    <string name="menu_medium">MEDIUM</string>
    <string name="menu_hard">HARD</string>
    <string name="menu_professional">PROFESSIONAL</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
